tests/integration/api_key/snapshots/main__integration__api_key__keys__create_operator_text.snap
---
source: tests/integration/api_key/keys.rs
expression: "format!(\"--- stdout ---\\n{stdout}\\n--- stderr ---\\n{stderr}\")"
---
--- stdout ---
┌──────────┬───────────────────────────────────┐
│ ID       ┆ key-operator-2                    │
├╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Name     ┆ router-staging                    │
├╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Key Type ┆ Operator                          │
├╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ API Key  ┆ service:acme:a-new-operator-token │
└──────────┴───────────────────────────────────┘

--- stderr ---
