tests/integration/api_key/snapshots/main__integration__api_key__keys__delete_json.snap
---
source: tests/integration/api_key/keys.rs
expression: parsed
---
{
  "json_version": "1",
  "data": {
    "id": "key-operator-1",
    "success": true
  },
  "error": null
}
