tests/integration/api_key/snapshots/main__integration__api_key__keys__delete_text.snap
---
source: tests/integration/api_key/keys.rs
expression: "format!(\"--- stdout ---\\n{stdout}\\n--- stderr ---\\n{stderr}\")"
---
--- stdout ---

--- stderr ---
Deleted API Key key-operator-1
