tests/integration/api_key/snapshots/main__integration__api_key__keys__list_operator_only_text.snap
---
source: tests/integration/api_key/keys.rs
expression: "format!(\"--- stdout ---\\n{stdout}\\n--- stderr ---\\n{stderr}\")"
---
--- stdout ---
┌────────────────┬─────────────┬────────────────────────────┬────────────┐
│ ID             ┆ Name        ┆ Created At                 ┆ Expires At │
╞════════════════╪═════════════╪════════════════════════════╪════════════╡
│ key-operator-1 ┆ router-prod ┆ 2026-01-15 10:00:00 +00:00 ┆ Never      │
└────────────────┴─────────────┴────────────────────────────┴────────────┘

--- stderr ---
